--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="@dimen/shadow_offset"
+    android:padding="@dimen/item_padding"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -10,8 +10,8 @@
     <me.peace.widget.image.Sh2ImageView
         android:focusableInTouchMode="true"
         android:focusable="true"
-        android:layout_width="100px"
-        android:layout_height="100px"
+        android:layout_width="@dimen/item_size"
+        android:layout_height="@dimen/item_size"
         android:id="@+id/image"
         />
 
